# selenPage

./: README.md  conftest.py  pyproject.toml  pytest.ini  test_menu_links.py
.github/workflows/: github_actions.yml
pages/: base_page.py  locators.py  main_page.py
