[tool.poetry]
name = "selenium"
version = "0.1.0"
description = ""
authors = ["zastasja <anastasia_zh@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
